[package]
edition = "2021"
name = "futures-combine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.21"}
log = "0.4.16"
thiserror = "1.0.31"

[dev-dependencies]
anyhow = "1.0.57"
async-std = {version = "1.11.0", features = ["attributes", "default"]}
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
